--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -1,113 +1,33 @@
-﻿
-<div class="lobby-content-container">
-<div style="background:white;position:relative;width:100%;height:24px;"></div>
-	
-	@if (!Request.IsAuthenticated)
- {
-	@Html.Partial("_Login")
-	@Html.Partial("_Register")
- }
-
-
-	<section>
-	<div id="moje-sprawy-container" class="lobby-content-body">
-
-		<header class="title-header">Moje Sprawy<a class="moje-sprawy-btn" href="#" style="float:right;color:black;">zamknij</a></header>
-
-	</div>
-
-	<div class="selected-content-container">
-
-		<header class="title-header">Szkolenia<a class="szkolenia-btn" href="#" style="float:right;color:black;">zamknij</a></header>
-		<div class="event-list-date-header">
-			12.03.2012
-		</div>
+﻿<div class="lobby-content-container">
+	@*<div style="background: white; position: relative; width: 100%; height: 24px;"></div>*@
+	<div class="lobby-content-body">
 		
-		<section class="event-list" data-bind="foreach: allEvents">
-			<div class="news-event-details" data-bind="if: kind.kindName == 'Szkolenie', visible: kind.kindName == 'Szkolenie'">
-				
-				<div class="left-event-details">
-					<div class="event-kind-text" data-bind="text: kind.kindName, style: { background: kind.color }">
-					</div>
-					<div class="events-text-container margin-left-fifteen padding-top-ten" data-bind="visible: kind.kindName != 'Aktualności'">
-
-						<span data-bind="text: date.startHour" class="events-text-startTime"></span><span>:00 - </span><span data-bind="	text: date.endHour" class="events-text-endTime"></span><span>:00</span>
-						<div>12.03.2012, Piątek</div>
-						<div data-bind="text: adress" class="events-text-address"></div>
-					</div>
-				</div>
-				<div class="middle-event-details">
-					<div class="event-title-container">
-						<a data-bind="text: title" class="events-text-name" href="#"></a>
-					</div>
-
-					<div class="events-text-container">
-						<div data-bind="text: description" class="events-text-description"></div>
-					</div>
-				</div>
-				<div class="right-event-details">
-					<div class="events-text-author-container">
-						<div>
-							<span>dodano przez: </span><a class="events-text-author" data-bind="text: addedBy" href="#"></a>
-						</div>
-						<div>
-							10:47 10.12.2013 
-						</div>
-					</div>
-				</div>
+		<div id="lobby-menu-header" class="site-menu-header">
+			<div id="lobbyLogo">
 			</div>
-		</section>
-	</div>
 
-<div class="lobby-content-body">
-<div id="lobby-menu-header" class="site-menu-header">
-	<div id="lobbyLogo">
-	</div>
-	<div>
-	<div style="margin-top:150px;width:30%;display:inline-block;margin-left:8%">
-		<div class="menu-item-container">
-			<div class="border-item inne-border-tab"></div>
-			<div class="menu-item" name="inne"><span>Inne</span></div>
-			
-		</div>
-		<div class="menu-item-container">
-			<div class="border-item spotkania-border-tab"></div>
-			<div class="menu-item" name="spotkania"><span>Spotkania</span></div>
-			
-		</div>
-		<div class="menu-item-container">
-			<div class="border-item kursy-border-tab"></div>
-			<div class="menu-item" name="kursy"><span>Kursy</span></div>
-			
-		</div>
-		<div class="menu-item-container">
-			<div class="border-item szkolenia-border-tab"></div>
-			<div class="menu-item" name="szkolenia"><span>Szkolenia</span></div>
+			@if (!Request.IsAuthenticated)
+			{
+				@Html.Partial("_Login")
+				@Html.Partial("_Register")
+			}
+
+			<div id="lobbyEventSummaryMenu">
+				@Html.Partial("_LobbyEventSummaryMenu")
+			</div>
+
+			@if (Request.IsAuthenticated)
+			{
+				@Html.Partial("_LobbyProfileMenu")
+			}
 
 		</div>
-		<div class="menu-item-container">
-			<div class="border-item zajecia-border-tab"></div>
-			<div class="menu-item" name="zajęcia"><span>Zajęcia</span></div>
-			
-		</div>
-		<div class="menu-item-container">
-			<div class="border-item wydarzenia-border-tab"></div>
-			<div class="menu-item" name="wydarzenia"><span>Wydarzenia</span></div>
-			
-		</div>
-		</div>
-		@if (Request.IsAuthenticated)
- {
-	@Html.Partial("_LobbyProfileMenu")
- } 
-	</div>
-	
-	</div>
+
 		<header class="title-header">Aktualności</header>
 		<div class="event-list-date-header">
 			12.03.2012
 		</div>
-		
+
 		<section class="event-list" data-bind="foreach: allEvents">
 			<div class="news-event-details" data-bind="ifnot: kind.kindName == 'Zajęcia', visible: kind.kindName != 'Zajęcia'">
 				<div class="left-event-details">
@@ -120,9 +40,9 @@
 						<div data-bind="text: adress" class="events-text-address"></div>
 					</div>
 				</div>
-				
+
 				<div class="middle-event-details">
-				
+
 					<div class="event-title-container">
 						<a data-bind="text: title" class="events-text-name" href="#"></a>
 					</div>
@@ -144,8 +64,7 @@
 			</div>
 		</section>
 	</div>
-	</section>
-	
+
 	<footer class="lobby-footer">
 		Kalendarz Kariery 2012, wszelkie prawa zastrzezone
 	</footer>
