--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -170,6 +170,15 @@ body header {
 	position: absolute;
 }
 
+#calendarLogoSmallContainer img {
+	/*position: absolute;
+	top: 20px;
+	left: 60px;
+	height: 60px !important;
+	width: 60px !important;
+	z-index: 10;*/
+}
+
 #calendar-menu-header {
 	display: table-caption;
 	color: white;
@@ -182,13 +191,14 @@ body header {
 #loginPageContainer {
 	margin-right: 8%;
 	float: right;
-	background: rgb(199, 199, 199);
+	background: rgba(0,0,0,.04);
 	display: inline-block;
 	width: 50%;
 	padding-top: 30px;
 	color: rgb(104,104,104);
-	border: 1px solid rgb(216, 255, 232);
+	/*border: 1px solid rgb(216, 255, 232);*/
 	margin-top: 150px;
+	border: 1px solid rgb(247, 247, 247);
 }
 
 	#loginPageContainer legend {
@@ -230,8 +240,8 @@ body header {
 }
 
 #loginPageContainer fieldset {
-	border: 1px solid rgb(231, 231, 231);
-	background: rgb(228, 228, 228);
+	border: transparent;
+	background: rgba(0, 0,0,.07);
 }
 
 .weekday-container {
@@ -590,9 +600,9 @@ background:rgb(115, 233, 162);
 }
 
 .news-event-details {
-	border-top: 1px solid rgb(189, 189, 189);
-	background: rgba(0, 0, 0, 0.09);
-	box-shadow: 0 1px 2px white;
+	border-top: 1px solid rgb(202, 202, 202);
+	background: rgba(0, 0, 0, 0.04);
+	box-shadow: 0 2px 0 white;
 	text-align: center;
 	position: relative;
 	overflow: hidden;
@@ -604,15 +614,12 @@ background:rgb(115, 233, 162);
 }
 
 .middle-event-details {
+	margin-left: 10px;
 	float: left;
-	width: 50%;
 	position: relative;
-	color: rgb(109,109,109);
-	/*background:rgb(76, 86, 94);*/
-	/*box-shadow:0 1px 5px rgb(60,60,60);*/
-	/*border:1px solid rgb(207, 207, 207);*/
-	/*background:rgb(221,221,221);
-	box-shadow:inset 0 4px 10px rgb(202, 202, 202);*/
+	background: rgba(65, 65, 13, 0.29);
+	box-shadow: 0 1px 5px rgb(60,60,60);
+	border: 1px solid rgb(243, 243, 243);
 }
 
 .right-event-details {
@@ -643,6 +650,7 @@ background:rgb(115, 233, 162);
 #showRegisterFormBtn {
 	margin-left: 20px;
 	margin-right: 4px;
+	color: rgb(87, 87, 87);
 }
 
 .lobby-profile-menu {
@@ -675,12 +683,15 @@ background:rgb(115, 233, 162);
 
 .events-text-name {
 	font-size: 1.2em;
-	font-weight: bold;
 }
 
-.event-title-container a {
-	color: rgb(104,104,104);
+.event-title-container {
+	padding: 0 10px;
 }
+
+	.event-title-container a {
+		color: rgb(253,253,253);
+	}
 
 
 .lobby-footer {
@@ -696,7 +707,8 @@ background:rgb(115, 233, 162);
 }
 
 .event-list {
-	width: 80%;
+	width: 85%;
+	margin: 0 auto;
 	color: gray;
 	font-size: 1em;
 	overflow: hidden;
@@ -712,9 +724,6 @@ background:rgb(115, 233, 162);
 	width: 100px;
 	/*box-shadow: 0 2px 10px rgb(60, 60, 60);*/
 	border: 1px solid rgb(224,224,224);
-}
-
-.event-title-container {
 }
 
 .events-text-author-container {
@@ -815,12 +824,13 @@ wydarzenia-tab {
 }
 
 #lobbyEventSummaryMenu {
-	margin-top:150px;
-	width:30%;
-	display:inline-block;
-	margin-left:8%;
-	background: rgba(0, 0, 0, 0.1);
+	margin-top: 150px;
+	width: 30%;
+	display: inline-block;
+	margin-left: 8%;
+	background: rgba(0, 0, 0, 0.04);
 	padding: 10px;
+	border: 1px solid rgb(240, 240, 240);
 }
 
 .current-month-name-calendar {
