--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -272,7 +272,7 @@ body header {
 	height: 80px;
 	display: table-cell;
 	/*overflow: hidden;*/
-	position: relative;
+	/*position: relative;*/
 }
 
 .calendar-cell-placeholder {
