--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Register.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model KalendarzKariery.ViewModels.RegisterViewModel
+﻿@model KalendarzKarieryData.Models.ViewModels.RegisterViewModel
 
 <section id="registerPageContainer">
 	@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { id = "registerForm" }))
